--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -19,7 +19,8 @@ jobs:
           # submodules: true
 
       - name: 安装 pnpm
-        uses: pnpm/action-setup@v2
+        # uses: pnpm/action-setup@v2
+        uses: pnpm install --no-frozen-lockfile
         with:
           version: 8
           run_install: true
