--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -19,10 +19,9 @@ jobs:
           # submodules: true
 
       - name: 安装 pnpm
-        # uses: pnpm/action-setup@v2
-        uses: pnpm install --no-frozen-lockfile
+         uses: pnpm/action-setup@v2
         with:
-          version: 8
+          version: 7
           run_install: true
       - name: 设置 Node.js
         uses: actions/setup-node@v3
